[gd_scene load_steps=4 format=2]

[ext_resource path="res://NPC/SpeakingNPC.gd" type="Script" id=2]
[ext_resource path="res://NPC/speachbubble.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="SpeakingNPC" type="Area2D" groups=["Persistent"]]
collision_layer = 0
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
region_rect = Rect2( 0, 0, 63.8448, 63.4464 )

[node name="BubbleIcon" type="Sprite" parent="."]
visible = false
position = Vector2( -2, -21 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
region_rect = Rect2( 0, 0, 63.8448, 63.4464 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[connection signal="body_entered" from="." to="." method="_on_SpeakingNPC_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_SpeakingNPC_body_exited"]
